Show tags dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -202,4 +202,5 @@
     <string name="refill_size">Refill size</string>
     <string name="refill_now">Refill now</string>
     <string name="variable_amount">Enter dosage when taken</string>
+    <string name="tags" translatable="false">Tags</string>
 </resources>
