--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -204,4 +204,5 @@
     <string name="variable_amount">Enter dosage when taken</string>
     <string name="tags" translatable="false">Tags</string>
     <string name="add_tag" translatable="false">Add tag</string>
+    <string name="are_you_sure_delete_tag" translatable="false">Are you sure to delete the tag?</string>
 </resources>
