--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -202,7 +202,7 @@
     <string name="refill_size">Refill size</string>
     <string name="refill_now">Refill now</string>
     <string name="variable_amount">Enter dosage when taken</string>
-    <string name="tags" translatable="false">Tags</string>
-    <string name="add_tag" translatable="false">Add tag</string>
-    <string name="are_you_sure_delete_tag" translatable="false">Are you sure to delete the tag?</string>
+    <string name="tags">Tags</string>
+    <string name="add_tag">Add tag</string>
+    <string name="are_you_sure_delete_tag">Are you sure to delete the tag?</string>
 </resources>
