--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -205,4 +205,5 @@
     <string name="tags">Tags</string>
     <string name="add_tag">Add tag</string>
     <string name="are_you_sure_delete_tag">Are you sure to delete the tag?</string>
+    <string name="unit">Unit</string>
 </resources>
