--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -201,4 +201,5 @@
     <string name="tags">Tags</string>
     <string name="add_tag">Tag hinzufügen</string>
     <string name="are_you_sure_delete_tag">Tag wirklich löschen?</string>
+    <string name="unit">Einheit</string>
 </resources>
