--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -203,4 +203,5 @@
     <string name="add_tag">குறியீட்டைச் சேர்</string>
     <string name="are_you_sure_delete_tag">குறியீட்டை நீக்க உறுதியாக இருக்கிறீர்களா?</string>
     <string name="unit">அலகு</string>
+    <string name="unlimited">வரம்பற்ற</string>
 </resources>
