--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -202,4 +202,5 @@
     <string name="add_tag">Etiket ekle</string>
     <string name="are_you_sure_delete_tag">Etiketi silmek istediğinizden emin misiniz?</string>
     <string name="unit">Birim</string>
+    <string name="unlimited">Sınırsız</string>
 </resources>
