--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -212,4 +212,5 @@
     <string name="add_tag">Додати тег</string>
     <string name="are_you_sure_delete_tag">Ви впевнені, що хочете видалити тег?</string>
     <string name="unit">Одиниця</string>
+    <string name="unlimited">Необмежена</string>
 </resources>
