--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -206,4 +206,5 @@
     <string name="add_tag">Add tag</string>
     <string name="are_you_sure_delete_tag">Are you sure to delete the tag?</string>
     <string name="unit">Unit</string>
+    <string name="unlimited">Unlimited</string>
 </resources>
