--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -207,4 +207,7 @@
     <string name="are_you_sure_delete_tag">¿Estás seguro de borrar la etiqueta?</string>
     <string name="unit">Unidad</string>
     <string name="unlimited">Sin límites</string>
+    <string name="override_dnd">Reproducir siempre el sonido de notificación</string>
+    <string name="override_dnd_summary">Reproduce el sonido de las notificaciones si sólo está activada la vibración o no molestar sin vibración ni silencio</string>
+    <string name="enable_dnd_dialog">Para permitir la reproducción permanente de sonidos de notificación, active el acceso No molestar para MedTimer en el siguiente menú</string>
 </resources>
