--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -202,4 +202,7 @@
     <string name="are_you_sure_delete_tag">Weet je zeker dat je de tag moet verwijderen?</string>
     <string name="unit">Eenheid</string>
     <string name="unlimited">Onbeperkt</string>
+    <string name="override_dnd">Altijd meldingsgeluid afspelen</string>
+    <string name="override_dnd_summary">Speelt meldingen af als alleen trillen is ingeschakeld of niet storen zonder trillen of dempen</string>
+    <string name="enable_dnd_dialog">Als u wilt dat meldingsgeluiden altijd worden afgespeeld, schakelt u de toegang Niet storen voor MedTimer in het volgende menu in</string>
 </resources>
