--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -212,4 +212,7 @@
     <string name="are_you_sure_delete_tag">Ви впевнені, що хочете видалити тег?</string>
     <string name="unit">Одиниця</string>
     <string name="unlimited">Необмежена</string>
+    <string name="override_dnd">Завжди вмикати звук сповіщень</string>
+    <string name="override_dnd_summary">Відтворення звуку сповіщень, якщо увімкнено лише вібрацію, або не турбувати без вібрації чи без звуку</string>
+    <string name="enable_dnd_dialog">Щоб увімкнути постійне відтворення звуків сповіщень, увімкніть опцію Не турбувати доступ для MedTimer у наступному меню</string>
 </resources>
