--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -211,4 +211,5 @@
     <string name="override_dnd_summary">Riproduce il suono delle notifiche se è attiva solo la vibrazione o non disturbare senza vibrazione o silenziamento</string>
     <string name="enable_dnd_dialog">Per consentire la riproduzione continua dei suoni di notifica, attivare l&amp;apos;accesso Non disturbare per MedTimer nel seguente menu</string>
     <string name="app_authentication">Richiedere l&amp;apos;autenticazione per aprire l&amp;apos;app</string>
+    <string name="login">Accedere a MedTimer utilizzando l&amp;apos;autenticazione biometrica</string>
 </resources>
