--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -216,4 +216,5 @@
     <string name="override_dnd_summary">Відтворення звуку сповіщень, якщо увімкнено лише вібрацію, або не турбувати без вібрації чи без звуку</string>
     <string name="enable_dnd_dialog">Щоб увімкнути постійне відтворення звуків сповіщень, увімкніть опцію Не турбувати доступ для MedTimer у наступному меню</string>
     <string name="app_authentication">Вимагати автентифікацію для відкриття програми</string>
+    <string name="login">Вхід до MedTimer за допомогою біометричної автентифікації</string>
 </resources>
