--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -217,4 +217,6 @@
     <string name="enable_dnd_dialog">Щоб увімкнути постійне відтворення звуків сповіщень, увімкніть опцію Не турбувати доступ для MedTimer у наступному меню</string>
     <string name="app_authentication">Вимагати автентифікацію для відкриття програми</string>
     <string name="login">Вхід до MedTimer за допомогою біометричної автентифікації</string>
+    <string name="privacy_settings">Налаштування конфіденційності</string>
+    <string name="hide_med_name">Приховати назву препарату в сповіщенні</string>
 </resources>
