--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -212,4 +212,6 @@
     <string name="enable_dnd_dialog">Pour que les sons de notification soient toujours diffusés, activez l&amp;apos;accès Ne pas déranger pour MedTimer dans le menu suivant</string>
     <string name="app_authentication">Exiger une authentification pour ouvrir l&amp;apos;application</string>
     <string name="login">Se connecter à MedTimer en utilisant l&amp;apos;authentification biométrique</string>
+    <string name="privacy_settings">Paramètres de confidentialité</string>
+    <string name="hide_med_name">Cacher le nom du médicament dans la notification</string>
 </resources>
