--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="tab_settings">Impostazioni</string>
     <string name="tab_overview">Riepilogo</string>
@@ -213,4 +212,6 @@
     <string name="enable_dnd_dialog">Per consentire la riproduzione continua dei suoni di notifica, attivare l&amp;apos;accesso Non disturbare per MedTimer nel seguente menu</string>
     <string name="app_authentication">Richiedere l&amp;apos;autenticazione per aprire l&amp;apos;app</string>
     <string name="login">Accedere a MedTimer utilizzando l&amp;apos;autenticazione biometrica</string>
+    <string name="privacy_settings">Impostazioni sulla privacy</string>
+    <string name="hide_med_name">Nascondere il nome del farmaco nella notifica</string>
 </resources>
